# nav_car

./: .gitignore  README.md  colcon_defaults.yaml  frames_2025-08-28_11.01.32.gv
.devcontainer/: devcontainer.json
diffbot_base/launch/: diffbot.launch
diffbot_base/src/: diffbot_base.cpp
diffbot_bringup/launch/: bringup.launch  minimal.launch
diffbot_control/config/: diffbot_control.yaml  pid.yaml
diffbot_control/launch/: diffbot.launch
diffbot_control/rviz/: diffbot.rviz  diffbot_custom.rviz
diffbot_description/launch/: view_diffbot.launch
diffbot_description/rviz/: diffbot_description.rviz
diffbot_gazebo/launch/: diffbot_view.launch
diffbot_gazebo/models/custom/: model.sdf
diffbot_gazebo/worlds/: db_world.world
diffbot_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml
diffbot_navigation/launch/: amcl.launch  diffbot_hw.launch  move_base.launch
diffbot_slam/config/: diffbot_lds_2d.lua  diffbot_lds_2d_locatization.lua  gmapping_params.yaml
diffbot_slam/launch/: diffbot_cartographer.launch  diffbot_cartographer_localization.launch  diffbot_cartographer_mapping.launch
diffbot_slam/rviz/: diffbot_cartographer.rviz
docker/: .env  Dockerfile  Dockerfile.arm64  docker-compose.yaml
motor_driver/: CMakeLists.txt  package.xml
motor_driver/src/: motor_driver.cpp  motor_driver_async.cpp
nav_car_description/: CMakeLists.txt  package.xml
nav_car_description/config/mobile_robot/: back_wheel.yaml  base.yaml
nav_car_description/config/nav_car/: motor.yaml  sensors.yaml
nav_car_description/launch/: nav_car_rviz.launch
nav_car_description/urdf/: nav_car.urdf.xacro
nav_car_description/urdf/include/: common_macros.urdf.xacro  robot.gazebo.xacro
navcar_bringup/: CMakeLists.txt  package.xml
navcar_bringup/launch/: bringup_with_laser.launch.py  bringup_with_laser.py  display.launch.py  navcar_bringup.launch.py
navcar_control/: CMakeLists.txt
navcar_control/config/: diffbot_control.yaml
navcar_control/launch/: navcar_control.launch.py
navcar_control/urdf/: nav_car_ros2_control.xacro
navcar_description/: package.xml
navcar_description/launch/: nav_car_rviz.launch.py
navcar_description/urdf/: nav_car.urdf.xacro
navcar_description/urdf/include/: common_sensors.xacro
navcar_hardware/: CMakeLists.txt  README.md
navcar_hardware/include/navcar_hardware/: navcar_hardware.hpp  tcp_server.hpp
navcar_hardware/launch/: test_hardware.launch.py
navcar_hardware/src/: navcar_hardware.cpp  tcp_server.cpp
navcar_joytick/: README.md  package.xml
navcar_joytick/config/: xbox_config.yaml
navcar_joytick/launch/: navcar_joystick.launch.py
navcar_slam/: CMakeLists.txt  README.md  package.xml
navcar_slam/config/: diffbot_lds_2d_localization.lua
navcar_slam/launch/: slam.launch.py
navcar_slam/rviz/: localization.rviz  slam.rviz
navcar_slam/scripts/: save_map.py
src/navcar_bringup/: README.md
src/navcar_bringup/launch/: bringup_with_laser.launch.py  robot.launch.py
src/navcar_control/: package.xml
src/navcar_control/launch/: navcar_control.launch.py
src/navcar_description/: CMakeLists.txt
src/navcar_description/config/nav_car/: front_wheel.yaml
src/navcar_description/rviz/: nav_car.rviz
src/navcar_description/urdf/: nav_car.urdf.xacro
src/navcar_description/urdf/include/: common_macros.urdf.xacro  common_sensors.xacro
src/navcar_hardware/: navcar_hardware.xml  package.xml
src/navcar_hardware/include/navcar_hardware/: tcp_server.hpp
src/navcar_hardware/src/: tcp_server.cpp
src/navcar_joytick/: CMakeLists.txt
src/navcar_joytick/config/: ps3_config.yaml
src/navcar_joytick/launch/: navcar_joystick.launch.py  navcar_joystick_bringup.launch.py
src/navcar_slam/config/: diffbot_lds_2d.lua
src/navcar_slam/launch/: localization.launch.py  slam.launch.py
src/navcar_slam/rviz/: localization.rviz  slam.rviz
src/navcar_slam/scripts/: save_map.py
wheeltec_joy_control/: CMakeLists.txt  package.xml
wheeltec_joy_control/launch/: ctrl_nav_car.launch
