<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navcar_slam</name>
  <version>0.0.0</version>
  <description>SLAM package for NavCar robot using Cartographer</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>navcar_description</exec_depend>
  <exec_depend>navcar_bringup</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
